# paprika-engine

./: .gitattributes  .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  LICENSE.txt  Package.appxmanifest  PaprikaEngine.sln  PaprikaEngine.vcxproj  PaprikaEngine.vcxproj.filters  PaprikaEngineMain.cpp  PaprikaEngineMain.h  README.md
Assets/Models/: ABeautifulGame.gltf  Duck2.gltf  Sponza.gltf
Assets/Shaders/: BasePassPS.hlsl  BasePassVS.hlsl  CustomClearBuffersCS.hlsl  DenoisePS.hlsl  DenoiseVS.hlsl  DepthVS.hlsl  SamplePixelShader.hlsl  SampleVertexShader.hlsl  ShadowVarianceCS.hlsl  ShadowVariancePS.hlsl  ShadowVarianceVS.hlsl
Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h
Core/: CMakeLists.txt
Core/Include/: Application.h  ApplicationHelper.h  ComponentManager.h  EntityUtils.h  GLTFReader.h  ImGuiHelper.h  InputController.h  Logger.h  StepTimer.h  StreamReader.h  Timer.h  Transform.h  TransformComponent.h  TransformUtils.h  stdafx.h
Core/Src/: Application.cpp  ComponentManager.cpp  GLTFReader.cpp  InputController.cpp  Transform.cpp  TransformComponent.cpp  TransformUtils.cpp  stdafx.cpp
Launcher/: CMakeLists.txt
Launcher/Src/: main.cpp
PaprikaLauncher/: CMakeLists.txt
PaprikaLauncher/Src/: main.cpp
Renderer/: CMakeLists.txt
Renderer/Components/Include/: CameraComponent.h  Material.h  MeshComponent.h  PointLightComponent.h
Renderer/Components/Src/: CameraComponent.cpp  Material.cpp  MeshComponent.cpp  PointLightComponent.cpp
Renderer/Include/: BackendUtils.h  Camera.h  DxgiHelper.h  Material.h  Mesh.h  PassManager.h  Renderer.h  ShaderStructures.h  stdafx_renderer.h
Renderer/Include/Passes/: BasePass.h  CustomClearBuffersPass.h  DenoisePPFXPass.h  DepthPass.h  Pass.h  ShadowVariancePass.h  ShadowVarianceResolvePass.h
Renderer/Include/RHI/: CommandContext.h  ConstantBuffer.h  DescriptorHeap.h  DescriptorHeapElement.h  DescriptorHeapHandle.h  DescriptorHeapManager.h  GPUResource.h  GPUResourceManager.h  PersistentUploadBuffer.h  Sampler.h  ShaderDescriptorHeap.h  StagingDescriptorHeap.h  Texture.h  VertexBuffer.h
Renderer/Src/: Camera.cpp  Material.cpp  Mesh.cpp  PassManager.cpp  Renderer.cpp  stdafx_renderer.cpp
Renderer/Src/Passes/: BasePass.cpp  CustomClearBuffersPass.cpp  DenoisePPFXPass.cpp  DepthPass.cpp  Pass.cpp  ShadowVariancePass.cpp  ShadowVarianceResolvePass.cpp
Renderer/Src/RHI/: CommandContext.cpp  ConstantBuffer.cpp  DescriptorHeap.cpp  DescriptorHeapElement.cpp  DescriptorHeapHandle.cpp  DescriptorHeapManager.cpp  GPUResource.cpp  GPUResourceManager.cpp  PersistentUploadBuffer.cpp  Sampler.cpp  ShaderDescriptorHeap.cpp  StagingDescriptorHeap.cpp  Texture.cpp  VertexBuffer.cpp
Renderer/Systems/Include/: ControllerSystem.h  RenderingSystem.h
Renderer/Systems/Src/: ControllerSystem.cpp  RenderingSystem.cpp
Scene/: CMakeLists.txt
Scene/Include/: Scene.h  Transform.h
Scene/Include/Entities/: CameraEntity.h  LightEntity.h  MeshEntity.h
Scene/Src/: Scene.cpp  Transform.cpp
Scene/Src/Entities/: CameraEntity.cpp  LightEntity.cpp  MeshEntity.cpp
